# gpt2-playground

./: .pre-commit-config.yaml  constants.py  inference.py  model.py  prepare_go_dataset.py  prepare_shakespeare.py  pyproject.toml  sample.py  train.py
data_loader/: dataset.py  datasets.py  feature_engineering.py
io/: game_parser.py
models/: gpt.py
preprocessing/: csv_export.py  extract_go_datasets.py  feature_engineering.py  game_parser.py  web_crawler.py
transform/: feature_engineering.py
