[tool.poetry]
name = "gpt2-playground"
version = "0.1.0"
description = "Python template repository"
authors = ["dogeplusplus <albertswchung@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lightning = "^2.0.4"
torch = "^2.0.1"
numpy = "1.24.0"
tiktoken = "^0.4.0"
einops = "^0.6.1"
deepspeed = "^0.9.5"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.3.0"
yapf = "^0.32.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
